--- a/StyloIndexMitre.css
+++ b/StyloIndexMitre.css
@@ -38,12 +38,12 @@ body {
 /* Estilo para los divs contenedores */
 .container {
     display: flex;
-    justify-content: center;
+    justify-content:center;
     align-items: center;
     gap: 20px;
-    padding-top: 80px; /* Para evitar que el contenido quede detrás del banner */
+    padding-top: 120px; /* Para evitar que el contenido quede detrás del banner */
     flex-wrap: nowrap; /* Asegura que los divs se mantengan en una sola fila */
-    width: 100%;
+    width: 90%;
     max-width: 1200px; /* Limita el ancho máximo de los divs */
     overflow-x: auto; /* Permite el desplazamiento horizontal */
     -webkit-overflow-scrolling: touch; /* Mejora la experiencia táctil en móviles */
@@ -67,7 +67,7 @@ body {
 }
 .box:hover {
     transform: scale(1.2);
-    background-color: rgba(0, 0, 0, 0.678);
+    background-color: rgba(0, 0, 0, 0.767);
 }
 
 .box img {
@@ -79,18 +79,19 @@ body {
 .box p {
     font-size: 18px;
     color: white;
+    border: #000000;
 }
 
 .box button {
     padding: 5px 10px;
     border: none;
-    background-color: white;
+    background-color: rgb(248, 170, 0);
     color: rgb(0, 0, 0);
     cursor: pointer;
     border-radius: 5px;
 }
 .box button:hover {
-    background-color: rgb(239, 248, 112);
+    background-color: rgb(255, 217, 1);
 }
 
 /* Media query para pantallas pequeñas (móviles) */
